syntax = "proto3";

package api.transaction.v4;
import "google/api/annotations.proto";
option go_package = "anjuke/api/transaction/v4;v4";
option java_multiple_files = true;
option java_package = "api.transaction.v4";
option java_outer_classname = "TransactionProtoV4";

service Transaction {
	rpc CreateTransaction (CreateTransactionRequest) returns (CreateTransactionReply){
		option (google.api.http) = {
			post: "/transaction/create"
			body:"*"
		};
	};
}

message CreateTransactionRequest {}
message CreateTransactionReply {}
